js/src/jit-test/tests/binast/invalid/continue-outside-while.binjs
BINJS
[
GRAMMAR
]
identity
;
AssertedBlockScope2AssertedScriptGlobalScope
Block
"
ContinueStatement0LiteralBooleanExpression
Script
WhileStatement
[
STRINGS
]
identity
;
[
TREE
]
identity
;
